# pulse

./: .a2.yaml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  Taskfile.yaml  buf.gen.yaml  buf.yaml  code-improvements.md  compose.yml  docker-compose.agent.yml  docker-compose.yml  plan.md
.github/workflows/: ci.yml  release.yml
.task/checksum/: api-build  build-agent  build-api  cli-build  proto
agent/: Cargo.toml  Dockerfile  build.rs  go.mod  go.sum
agent/cmd/agent/: main.go
agent/internal/config/: config.go  config_test.go
agent/internal/debounce/: debounce.go  debounce_test.go
agent/internal/docker/: poller.go  poller_test.go
agent/internal/executor/: executor.go  executor_test.go
agent/internal/grpcclient/: client.go  client_test.go
agent/internal/redact/: redact.go  redact_test.go
agent/src/: lib.rs  main.rs
agent/src/config/: mod.rs
agent/src/docker/: mod.rs
agent/src/error/: mod.rs
agent/src/executor/: mod.rs
agent/src/grpc/: mod.rs
agent/src/redact/: mod.rs
agent/src/sysinfo/: mod.rs
agent/tests/: docker_integration.rs
api/: Dockerfile  go.mod  go.sum  openapi.yaml
api/cmd/api/: main.go  main_test.go
api/internal/db/: db.go  (+4 more)
cli/: go.mod  go.sum
docs/: agent.md  architecute.md  db-schema.md  plan.md  spec.md  tls.md
proto/: go.mod  go.sum
ui/: Dockerfile  biome.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
ui/coverage/: clover.xml  coverage-final.json  index.html
ui/src/: App.tsx  types.ts
(+134 files in other folders)
